--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,19 +217,24 @@ body {
   }
 
   @media only screen and (max-width: 980px){
-nav a{
-  float:left;
-}
- header{
+  /* nav{ } */
+
+  header{
    position:static;
  }   
-    body{
+    .main-section {
         float:left;
-        width:75%;
-        height:75%; 
+        width:70%;
+        height:70%;
+       
     }
-    footer{
-      position:static;
-    }
+    
+}
+@media only screen and (max-width: 768px){
+  .main-section{
+    float:left;
+    width:100%;
+    height:100%
+  }
 }
   
