--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,10 @@ body {
         height:70%;
        
     }
+   .work{
+    margin: 20px 0 20px 20px; 
+    
+   } 
     
 }
 @media only screen and (max-width: 768px){
