--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,28 +217,35 @@ body {
   }
 
   @media only screen and (max-width: 980px){
-  /* nav{ } */
-
-  header{
-   position:static;
- }   
-    .main-section {
-        float:left;
-        width:70%;
-        height:70%;
-       
-    }
-   .work{
-    margin: 20px 0 20px 20px; 
-    
-   } 
-    
-}
-@media only screen and (max-width: 768px){
-  .main-section{
-    float:left;
-    width:100%;
-    height:100%
-  }
-}
+    /* nav{ } */
   
+    header{
+     position:static;
+   }   
+      .main-section {
+          float:left;
+          width:672px;
+          padding:8px;
+          
+         
+      }
+      .work{ 
+      margin: 20px 0 20px 20px; 
+      
+     } 
+      
+  }
+  @media only screen and (max-width: 768px){
+    .main-section{
+      float:left;
+      width:100%;
+     
+    }
+  }
+  @media only screen and (max-width: 640px){
+    .main-section{
+      
+      width:80%;
+      
+    }
+  }
